@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0f6ff304a7dd94bd1789a2b043e0bb4f2212f7fe ChangeLog
+SHA1 0bbc44e9057abd9b66619c79584fbb8a3b1bcea1 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2c47234815d7762d27b0de69a1610dcf811aa740 MANIFEST
-SHA1 2dbe0ba5e91107e9dc4e17ac2f7ffd9030e3a684 META.yml
-SHA1 5f49fee32fe7a64543ff68239e5da6c3aefcaa5d Makefile.PL
+SHA1 3c2182f73d3250e4b00fb136066b2bee292cd014 META.yml
+SHA1 eed7649fa4de42c0799dd363bdf40be949217eca Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -35,23 +35,23 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 ea0266d35ae046dfa38aae00ee2f84f662135e88 lib/Net/FullAuto.pm
+SHA1 39557507f4ae86c654fa296ca1f8999e33aa764e lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 a6b31bc5f4cd8e45c1a9e1bfee72c780aec7f503 lib/Net/FullAuto/Distro/fa_code.pm
-SHA1 859a109e45c2003e1878f57ce9d494a75d6c0ca3 lib/Net/FullAuto/Distro/fa_code_demo.pm
+SHA1 bf191ccad1f37f926c1d8be94b67bcfeba373e49 lib/Net/FullAuto/Distro/fa_code_demo.pm
 SHA1 faa3cdecc1d47c1941ec95294dc86039e9decd21 lib/Net/FullAuto/Distro/fa_conf.pm
-SHA1 8d8fc92590add520a459cff1060a8f0959688aaf lib/Net/FullAuto/Distro/fa_host.pm
+SHA1 97492773d5021025f3239614db3915e85da625de lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 7563389137eb804672dba8fde06fdaee5f29d295 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
-SHA1 526056a847691139a4f69777ed6f7ffa6e1b3613 lib/Net/FullAuto/FA_Core.pm
+SHA1 4a986635244493d7a33d627775b06939540c989e lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk7T+bEACgkQdsVAdUjO9In+xwCeJaNvuR2/o83bytrTfxnvbtjt
-EmEAoKgWsvrlvoxRxVpvt9JQGs5Y7CQo
-=H/Xx
+iEYEARECAAYFAk7Wl5YACgkQdsVAdUjO9Ik57QCcCT4/Ia1/nk1jfv1sDmXiXIFF
+KQoAnR6rgCGmBceK5I8cp3C1kY121l3J
+=HsDi
 -----END PGP SIGNATURE-----
