@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9983';
+our $VERSION='0.9984';
 
 
 use 5.005;
