@@ -19,6 +19,13 @@
 ################################################################
 
 
+2011-11-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9984 released.
+
+        * Fixed some issues with very latest Ubuntu release.
+
+
 2011-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9983 released.
@@ -29,7 +36,7 @@
         * Added Note describing how to set up Cygwin mintty
           shortcut to run FullAuto on remote systems.
 
-        * Added compare_fa_login demo example to fa_code_demo.pm.
+        * Added compare_fa_code demo example to fa_code_demo.pm.
 
 
 2011-11-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
